k8s/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata: 
      labels:
        app: event
    spec:
      containers:
      - name: event
        image: go-monorepo/event:latest
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: event
spec:
  selector:
    app: event
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
